--- a/App/src/app/management/locations/details/details.component.html
+++ b/App/src/app/management/locations/details/details.component.html
@@ -8,7 +8,11 @@
             </div>
             <div class="modal-body">
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-md-4">
+                        <img [src]="location.url | urlPipe" alt="" class="img-fluid">
+                        <app-image-uploader [name]="'location'" [id]="location.id" (onUpload)="onUpload($event)"></app-image-uploader>
+                    </div>
+                    <div class="col-md-8">
                         <p class="text-muted mb-0"><small>Name</small></p>
                         <p>{{location?.name}}</p>
                     </div>
