--- a/App/src/app/shared/navbar/navbar.component.html
+++ b/App/src/app/shared/navbar/navbar.component.html
@@ -28,7 +28,7 @@
                         Welcome, {{userName}}
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" routerLink="/profile">Profile</a></li>
+                        <li><a class="dropdown-item" routerLink="/profile/{{userId}}">Profile</a></li>
                         <li><a class="dropdown-item" (click)="logout()">Log Out</a></li>
                     </ul>
                 </li>
