--- a/App/src/app/campaign/list-public/list-public.component.html
+++ b/App/src/app/campaign/list-public/list-public.component.html
@@ -17,7 +17,7 @@
             <div class="card p-3">
                 <div class="row">
                     <div class="col-md-4">
-                        <img src="{{api}}{{item.url}}" alt="{{item.name}} picture" class="img-fluid">
+                        <img [src]="item.url | urlPipe" alt="{{item.name}} picture" class="img-fluid">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
