--- a/App/src/app/campaign/details/details.component.html
+++ b/App/src/app/campaign/details/details.component.html
@@ -3,7 +3,7 @@
         <div class="col-12 text-end">
             <a class="btn btn-outline-success me-2" *ngIf="isOwner" routerLink="/management/{{item.id}}/home">Management</a>
             <a class="btn btn-outline-warning me-2" *ngIf="isOwner" routerLink="/campaign/edit/{{id}}">Edit</a>
-            <button class="btn btn-outline-danger" *ngIf="isOwner">Delete</button>
+            <button class="btn btn-outline-danger" *ngIf="isOwner" (click)="delete(item.id)">Delete</button>
             <button class="btn btn-outline-danger ms-4" *ngIf="joined">Leave</button>
         </div>
         <h2>Campaign Details</h2>
