--- a/App/src/app/shared/navbar/navbar.component.html
+++ b/App/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">RpgApp</a>
+        <a class="navbar-brand" routerLink="/">Mobile Tabletop</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar"
             aria-controls="mainNavbar">
             <span class="navbar-toggler-icon"></span>
