--- a/App/src/app/campaign/list-public/list-public.component.html
+++ b/App/src/app/campaign/list-public/list-public.component.html
@@ -1,5 +1,5 @@
 <div class="container pt-4">
-    <h2>Public campaigns</h2>
+    <h2 class="text-center">Public campaigns</h2>
     <div class="row">
         <div class="col-12 mt-4" *ngIf="isEmpty">
             <div class="alert alert-primary">
