Item module added

--- a/App/src/app/management/characters/add/add.component.html
+++ b/App/src/app/management/characters/add/add.component.html
@@ -53,7 +53,7 @@
                                 All</button>
                         </div>
                     </div>
-                    <h4>Characteristics <button class="btn btn-outline-info btn-sm">Roll</button></h4>
+                    <h4>Characteristics</h4>
                     <div class="row">
                         <div class="col-2 p-3" *ngFor="let char of characteristics">
                             <div class="row">
@@ -65,7 +65,7 @@
 
                         </div>
                     </div>
-                    <h4>Skills <button class="btn btn-outline-info btn-sm">Roll</button></h4>
+                    <h4>Skills</h4>
                     <div class="row">
                         <div class="col-2 p-3" *ngFor="let char of skills">
                             <div class="row">
