--- a/App/src/app/management/characters/details/details.component.html
+++ b/App/src/app/management/characters/details/details.component.html
@@ -24,7 +24,20 @@
                         <p>{{character?.race}}</p>
                     </div>
                 </div>
-                <h4>Characteristics</h4>
+                <ul class="nav nav-tabs mt-4" id="myTab" role="tablist">
+                    <li class="nav-item" role="presentation">
+                      <button class="nav-link active" id="attributes-tab" data-bs-toggle="tab" data-bs-target="#attributes" type="button" role="tab">Attributes</button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                      <button class="nav-link" id="notes-tab" data-bs-toggle="tab" data-bs-target="#notes" type="button" role="tab">Notes</button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                      <button class="nav-link" id="items-tab" data-bs-toggle="tab" data-bs-target="#items" type="button" role="tab" (click)="refreshItems()">Items</button>
+                    </li>
+                  </ul>
+                  <div class="tab-content" id="myTabContent">
+                    <div class="tab-pane fade show active" id="attributes" role="tabpanel" aria-labelledby="attributes-tab">
+                        <h4 class="mt-3">Characteristics</h4>
                 <div class="row">
                     <div class="col-2 p-3" *ngFor="let char of character?.characteristics">
                         <div class="row">
@@ -48,6 +61,46 @@
 
                     </div>
                 </div>
+                    </div>
+                    <div class="tab-pane fade" id="notes" role="tabpanel" aria-labelledby="notes-tab">
+                        ...
+                    </div>
+                    <div class="tab-pane fade" id="items" role="tabpanel" aria-labelledby="items-tab">
+                        <h4 class="mt-3">Add item</h4>
+                        <div class="row">
+                            <div class="col-11">
+                                <select [ngModel]="itemId" (ngModelChange)="selectItem($event)" name="newItem" id="newItem" class="form-control">
+                                    <option value="">-</option>
+                                    <option *ngFor="let item of availableItems" [value]="item.id">
+                                        {{item.name}}
+                                    </option>
+                                </select>
+                            </div>
+                            <div class="col-1">
+                                <button (click)="add()" class="btn btn-outline-success">
+                                    +
+                                </button>
+                            </div>
+                        </div>
+                        
+                        <h4 class="mt-3">Character items</h4>
+                        <div class="row">
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item p-3" *ngFor="let item of items">
+                                    <div class="row">
+                                        <div class="col-9">
+                                            {{ item.name }}
+                                        </div>
+                                        <div class="col-3">
+                                            <button class="btn btn-outline-danger" (click)="remove(item.id)">X</button>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                  </div>
+                
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-outline-light" data-bs-dismiss="modal">Close</button>
