--- a/App/src/app/management/characters/details/details.component.html
+++ b/App/src/app/management/characters/details/details.component.html
@@ -1,8 +1,7 @@
 <!-- Button trigger modal -->
 
 <!-- Modal -->
-<div class="modal fade" id="detailsModal" tabindex="-1" aria-labelledby="detailsModalLabel"
-    aria-hidden="true">
+<div class="modal fade" id="detailsModal" tabindex="-1" aria-labelledby="detailsModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div *ngIf="character" class="modal-content">
             <div class="modal-header">
@@ -13,7 +12,8 @@
                 <div class="row">
                     <div class="col-md-4">
                         <img [src]="character.url | urlPipe" alt="" class="img-fluid">
-                        <app-image-uploader [name]="'character'" [id]="character?.id" (onUpload)="onUpload($event)"></app-image-uploader>
+                        <app-image-uploader [name]="'character'" [id]="character?.id" (onUpload)="onUpload($event)">
+                        </app-image-uploader>
                     </div>
                     <div class="col-md-8">
                         <p class="text-muted mb-0"><small>First Name</small></p>
@@ -26,41 +26,45 @@
                 </div>
                 <ul class="nav nav-tabs mt-4" id="myTab" role="tablist">
                     <li class="nav-item" role="presentation">
-                      <button class="nav-link active" id="attributes-tab" data-bs-toggle="tab" data-bs-target="#attributes" type="button" role="tab">Attributes</button>
+                        <button class="nav-link active" id="attributes-tab" data-bs-toggle="tab"
+                            data-bs-target="#attributes" type="button" role="tab">Attributes</button>
                     </li>
                     <li class="nav-item" role="presentation">
-                      <button class="nav-link" id="notes-tab" data-bs-toggle="tab" data-bs-target="#notes" type="button" role="tab">Notes</button>
+                        <button class="nav-link" id="notes-tab" data-bs-toggle="tab" data-bs-target="#notes"
+                            type="button" role="tab">Notes</button>
                     </li>
                     <li class="nav-item" role="presentation">
-                      <button class="nav-link" id="items-tab" data-bs-toggle="tab" data-bs-target="#items" type="button" role="tab" (click)="refreshItems()">Items</button>
+                        <button class="nav-link" id="items-tab" data-bs-toggle="tab" data-bs-target="#items"
+                            type="button" role="tab" (click)="refreshItems()">Items</button>
                     </li>
-                  </ul>
-                  <div class="tab-content" id="myTabContent">
-                    <div class="tab-pane fade show active" id="attributes" role="tabpanel" aria-labelledby="attributes-tab">
+                </ul>
+                <div class="tab-content" id="myTabContent">
+                    <div class="tab-pane fade show active" id="attributes" role="tabpanel"
+                        aria-labelledby="attributes-tab">
                         <h4 class="mt-3">Characteristics</h4>
-                <div class="row">
-                    <div class="col-2 p-3" *ngFor="let char of character?.characteristics">
                         <div class="row">
-                            <div class="col-12 tile text-center pt-4">
-                                <p class="h4">{{char.value}}</p>
-                                <p class="text-muted"><small>{{char.name}}</small></p>
+                            <div class="col-2 p-3" *ngFor="let char of character?.characteristics">
+                                <div class="row">
+                                    <div class="col-12 tile text-center pt-4">
+                                        <p class="h4">{{char.value}}</p>
+                                        <p class="text-muted"><small>{{char.name}}</small></p>
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
-
-                    </div>
-                </div>
-                <h4>Skills</h4>
-                <div class="row">
-                    <div class="col-2 p-3" *ngFor="let char of character?.skills">
+                        <h4>Skills</h4>
                         <div class="row">
-                            <div class="col-12 tile text-center pt-4">
-                                <p class="h4">{{char.value + char.advancement}}</p>
-                                <p class="text-muted"><small>{{char.name}}</small></p>
+                            <div class="col-2 p-3" *ngFor="let char of character?.skills">
+                                <div class="row">
+                                    <div class="col-12 tile text-center pt-4">
+                                        <p class="h4">{{char.value + char.advancement}}</p>
+                                        <p class="text-muted"><small>{{char.name}}</small></p>
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
-
-                    </div>
-                </div>
                     </div>
                     <div class="tab-pane fade" id="notes" role="tabpanel" aria-labelledby="notes-tab">
                         ...
@@ -69,7 +73,8 @@
                         <h4 class="mt-3">Add item</h4>
                         <div class="row">
                             <div class="col-11">
-                                <select [ngModel]="itemId" (ngModelChange)="selectItem($event)" name="newItem" id="newItem" class="form-control">
+                                <select [ngModel]="itemId" (ngModelChange)="selectItem($event)" name="newItem"
+                                    id="newItem" class="form-control">
                                     <option value="">-</option>
                                     <option *ngFor="let item of availableItems" [value]="item.id">
                                         {{item.name}}
@@ -82,7 +87,7 @@
                                 </button>
                             </div>
                         </div>
-                        
+
                         <h4 class="mt-3">Character items</h4>
                         <div class="row">
                             <ul class="list-group list-group-flush">
@@ -99,8 +104,8 @@
                             </ul>
                         </div>
                     </div>
-                  </div>
-                
+                </div>
+
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-outline-light" data-bs-dismiss="modal">Close</button>
