--- a/App/src/app/management/locations/details/details.component.html
+++ b/App/src/app/management/locations/details/details.component.html
@@ -17,6 +17,94 @@
                         <p>{{location?.name}}</p>
                     </div>
                 </div>
+                <div class="row">
+                    <ul class="nav nav-tabs mt-4" id="myTab" role="tablist">
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link active" id="tests-tab" data-bs-toggle="tab"
+                                data-bs-target="#tests" type="button" role="tab">Items</button>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link" id="notes-tab" data-bs-toggle="tab" data-bs-target="#notes"
+                                type="button" role="tab">Notes</button>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link" id="items-tab" data-bs-toggle="tab" data-bs-target="#items"
+                                type="button" role="tab">Items</button>
+                        </li>
+                    </ul>
+                    <div class="tab-content" id="myTabContent">
+                        <div class="tab-pane fade show active" id="tests" role="tabpanel"
+                            aria-labelledby="tests-tab">
+                            <h4 class="mt-3">Tests</h4>
+                            <div class="row">
+                                <div class="col-4">
+                                    <div class="row">
+                                        <div class="col-2" style="display: flex; align-items: center;">
+                                            <div class="form-check">
+                                                <input checked class="form-check-input" type="radio" name="attribute" id="flexRadioDefault1">
+                                              </div>
+                                        </div>
+                                        <div class="col-10">
+                                            <div class="form-floating">
+                                                <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
+                                                    <option selected>-</option>
+                                                    <option value="1">One</option>
+                                                    <option value="2">Two</option>
+                                                    <option value="3">Three</option>
+                                                </select>
+                                                <label for="floatingSelect">Characteristic</label>
+                                                </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-4">
+                                    <div class="row">
+                                        <div class="col-2" style="display: flex; align-items: center;">
+                                            <input class="form-check-input" type="radio" name="attribute" id="flexRadioDefault1">
+                                        </div>
+                                        <div class="col-10">
+                                            <div class="form-floating">
+                                                <select disabled class="form-select" id="floatingSelect" aria-label="Floating label select example">
+                                                  <option selected>-</option>
+                                                  <option value="1">One</option>
+                                                  <option value="2">Two</option>
+                                                  <option value="3">Three</option>
+                                                </select>
+                                                <label for="floatingSelect">Skill</label>
+                                              </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-4">
+                                    <div class="form-floating">
+                                        <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
+                                          <option value="1">Regular</option>
+                                          <option value="2">Hard</option>
+                                          <option value="3">Extreme</option>
+                                        </select>
+                                        <label for="floatingSelect">Difficulty</label>
+                                      </div>
+                                </div>
+                                <div class="col-12 mt-2">
+                                    <div class="form-floating">
+                                        <textarea class="form-control" placeholder="Description" id="floatingTextarea2"></textarea>
+                                        <label for="floatingTextarea2">Description</label>
+                                      </div>
+                                </div>
+                                <div class="col-12 mt-2">
+                                    <button class="btn btn-outline-success">Add</button>
+                                </div>
+                                <hr class="mt-2">
+                            </div>
+                        </div>
+                        <div class="tab-pane fade" id="notes" role="tabpanel" aria-labelledby="notes-tab">
+                            ...
+                        </div>
+                        <div class="tab-pane fade" id="items" role="tabpanel" aria-labelledby="items-tab">
+                            ...
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-outline-light" data-bs-dismiss="modal">Close</button>
